feat: implement condition-intelligence system to trigger fans